--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "progexp",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "author": "Morty & Shpekel",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
@@ -17,6 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.9",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "3.0.3",
