--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,25 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node esbuild.config.mjs"
   },
   "author": "Morty & Shpekel",
   "license": "ISC",
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.2.3"
+  },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "esbuild": "^0.19.8",
     "express": "^4.18.2",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "sha256": "^0.2.0",
+    "socket.io": "^4.6.1"
   }
 }
