--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.2.3"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "esbuild": "^0.19.8",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "sha256": "^0.2.0",
     "socket.io": "^4.6.1"
   }
