--- a/package.json
+++ b/package.json
@@ -1,28 +1,8 @@
 {
-  "homepage": "./",
+  "homepage": "/",
   "name": "progexp",
   "version": "0.1.1",
   "author": "Morty & Shpekel",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.60",
-    "@types/react": "^18.2.36",
-    "@types/react-dom": "^18.2.14",
-    "framer-motion": "^10.16.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
@@ -46,6 +26,8 @@
     ]
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/react-transition-group": "^4.4.9",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
@@ -58,5 +40,26 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.60",
+    "@types/react": "^18.2.36",
+    "@types/react-dom": "^18.2.14",
+    "draft-js": "^0.11.7",
+    "framer-motion": "^10.16.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   }
 }
